# fastapi-instagram-architectures

./: @STATUS.md  README.md
07-vertical-slice/: @STATUS.md  README.md  main.py  pyproject.toml  test_vertical_slice.db
07-vertical-slice/src/vertical_slice/: main.py
07-vertical-slice/src/vertical_slice/api/: dependencies.py  routers.py  schemas.py
07-vertical-slice/src/vertical_slice/models/: base.py  tables.py
07-vertical-slice/src/vertical_slice/shared/: database.py  mediator.py  security.py
07-vertical-slice/tests/: conftest.py  test_api.py
08-event-driven/: @STATUS.md  README.md  main.py  pyproject.toml  test_event_driven.db
08-event-driven/src/event_driven/: main.py
08-event-driven/src/event_driven/api/: dependencies.py  routers.py
08-event-driven/src/event_driven/consumers/: hashtag_consumer.py  notification_consumer.py
08-event-driven/src/event_driven/events/: definitions.py
08-event-driven/src/event_driven/models/: base.py  tables.py
08-event-driven/src/event_driven/producers/: auth_producer.py  comment_producer.py  follow_producer.py  like_producer.py  message_producer.py  post_producer.py  story_producer.py
08-event-driven/src/event_driven/queries/: feed_queries.py  message_queries.py  notification_queries.py  post_queries.py  search_queries.py  story_queries.py  user_queries.py
08-event-driven/src/event_driven/shared/: database.py  event_broker.py  security.py
08-event-driven/tests/: conftest.py  test_api.py
12-saga-choreography/: @STATUS.md  README.md  pyproject.toml  test_saga_choreography.db
12-saga-choreography/src/saga_choreography/: main.py
12-saga-choreography/src/saga_choreography/api/: dependencies.py  routers.py
12-saga-choreography/src/saga_choreography/choreography/: handlers.py
12-saga-choreography/src/saga_choreography/events/: definitions.py
12-saga-choreography/src/saga_choreography/models/: tables.py
12-saga-choreography/src/saga_choreography/sagas/: comment_saga.py  create_post_saga.py  create_story_saga.py  delete_post_saga.py  follow_user_saga.py  like_post_saga.py  send_message_saga.py
12-saga-choreography/src/saga_choreography/services/: auth_service.py  comment_service.py  feed_service.py  (+9 more)
12-saga-choreography/tests/: conftest.py  test_api.py
(+404 files in other folders)
