[project]
name = "vertical-slice"
version = "0.1.0"
description = "Instagram clone - Vertical Slice Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic>=2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<5.0.0",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vertical_slice"]
